--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Color-O-Matic</string>
+    <string name="show_text_indicator">Show text indicator.</string>
 </resources>
